# nova-bench

./: .gitignore  .gitmodules  README.md
circom/: .gitignore  README.md  compile.sh  compile_circom.sh  compile_nova.sh  input_32.json  input_32_nova.json  input_32_recursive_1k.json  input_64.json  sha256_test.circom  sha256_test_nova.circom
circom/circuits/sha256/: sha256_bytes.circom
circom/circuits/sha256_test/: input_1.json  input_10.json  input_100.json  input_1000.json  input_10000.json  input_100000.json  input_1000000.json  sha256_test.circom
halo2/: .gitignore  Cargo.toml  README.md
halo2/examples/: sha256.rs
nova/: .gitignore  Cargo.toml  README.md  circom_input.json
nova/examples/: bitcoin.rs  sha256.rs  sha256_wasm.rs
nova/examples/bitcoin/circom/: compile.sh
nova/examples/sha256/circom/: README.md  compile.sh  compile2.sh  compile_pallas.sh  compile_vesta.sh  input_32_first_step2.json  package-lock.json  package.json  sha256_bytearray.py  sha256_bytes.circom  sha256_test_nova.circom  sha256_test_nova2.circom
