[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
ff = { version = "0.12.0", features = ["derive"]}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2.15"
nova-scotia = "0.2.2"
nova-snark = { version = "0.19.0" }
serde = "1.0"
serde_json = "1.0.85"
sha2 = "0.10.6"
wee_alloc = "0.4.5"
