[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
ff = { version = "0.12.0", features = ["derive"]}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2.15"

nova-scotia = {git = "https://github.com/oskarth/Nova-Scotia", branch="benchmark-logging"}
#nova-scotia = {path = "../../../privacy-scaling-explorations/nova-scotia/"}
#nova-scotia = {path = "../../../nalinbhardwaj/nova-scotia/"}
#nova-scotia = {git = "https://github.com/oskarth/Nova-Scotia.git", branch="feat/r1cs-dual"}

nova-snark = {git = "https://github.com/privacy-scaling-explorations/Nova", branch="nova-timers"}
#nova-snark = { path = "../../../microsoft/Nova" }
#nova-snark = { version = "0.19.0" }
serde = "1.0"
serde_json = "1.0.85"
sha2 = "0.10.6"
wee_alloc = "0.4.5"